--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@ body {
 	color: #FFF;
 	text-align: center;
 	font-size: large;
+}
+.bg {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
 	background-attachment: fixed;
 	background-image: url("/images/huayi.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	/*filter: blur(1.5px);*/
+	filter: blur(1.5px);
 }
 input, button {
-	/*font-size: 30px;*/
 	font-size: large;
 }
 .panel {
@@ -67,6 +74,7 @@ a {
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+<div class="bg"></div>
 <div class="panel">
 	<h1>华师一, 向梦想出发!</h1>
 	<p>
@@ -78,8 +86,7 @@ a {
 	如果觉得满意，请右键点击或长按图片手动保存即可
 	</p>
 	<input id="imageUpload" type="file" accept="image/png,image/gif,image/jpeg,image/bmp"/>
-	<input id="upimage" type="button" onclick="uploadImage()" value="生成">
-	<!--<input id="downimage" type="button" onclick="downloadImage()" value="下载">-->
+	<input id="upimage" type="button" onclick="uploadImage()" value="生成"/>
 </div>
 <div class="panel">
 	<div id="colorbar"></div>
