--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, viewport-fit=cover">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
 <title>华一必胜！</title>
 <!--<link rel="shortcut icon" href="/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.jpg">-->
@@ -51,6 +51,9 @@ a {
 	width: 1px;
 	height: 1px;
 }
+.form-control-color {
+	max-width: unset;
+}
 </style>
 </head>
 <body>
@@ -67,34 +70,32 @@ a {
 	如果觉得满意，请右键点击或长按图片手动保存即可
 	</p>
 	<div class="row">
-		<div class="input-group col-md-12">
-			<div class="custom-file">
-				<input type="file" class="custom-file-input" id="imageUpload" accept="image/png,image/gif,image/jpeg,image/bmp">
-				<label class="custom-file-label" for="imageUpload">点击上传图片</label>
-			</div>
-			<div class="input-group-append">
-				<button class="btn btn-primary" type="button" id="upimage" onclick="uploadImage()">生成</button>
+		<div class="col-md-8 mt-3">
+			<div class="input-group">
+				<label class="input-group-text" for="imageUpload">点击上传图片</label>
+				<input type="file" class="form-control" id="imageUpload" accept="image/png,image/gif,image/jpeg,image/bmp">
 			</div>
 		</div>
-		<div class="input-group col-md-4 mt-3">
-			<div class="input-group-prepend">
+		<div class="col-md-4 mt-3 d-grid">
+			<button class="btn btn-primary" type="button" id="upimage" onclick="uploadImage()">生成</button>
+		</div>
+		<div class="col-md-4 mt-3">
+			<div class="input-group">
 				<span class="input-group-text">选择颜色</span>
+				<input type="color" class="form-control form-control-color" id="color" value="#8B0012" oninput="pickColor()">
 			</div>
-			<input type="color" class="form-control" id="color" value="#8B0012" oninput="pickColor()">
 		</div>
-		<div class="input-group col-md-4 mt-3">
-			<div class="input-group-prepend">
+		<div class="col-md-4 mt-3">
+			<div class="input-group">
 				<label class="input-group-text" for="cover">透明度</label>
+				<input type="text" class="form-control" id="opacity" value="1" oninput="pickColor()">
 			</div>
-			<input type="text" class="form-control" id="opacity" value="1" oninput="pickColor()">
-			</select>
 		</div>
-		<div class="input-group col-md-4 mt-3">
-			<div class="input-group-prepend">
+		<div class="col-md-4 mt-3">
+			<div class="input-group">
 				<label class="input-group-text" for="cover">选择年份</label>
+				<select class="form-select" id="cover" oninput="pickColor()"></select>
 			</div>
-			<select class="custom-select" id="cover" oninput="pickColor()">
-			</select>
 		</div>
 	</div>
 </div>
