--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, viewport-fit=cover">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/bootstrap@5/dist/css/bootstrap.min.css">
 <title>华一必胜！</title>
 <!--<link rel="shortcut icon" href="/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon.jpg">-->
@@ -57,7 +57,7 @@ a {
 </style>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 <div class="bg"></div>
 <div class="panel">
 	<h1>华师一, 向梦想出发!</h1>
